--- a/src/Component/pages/BlogDetailsPage/BlogDetailsPage.scss
+++ b/src/Component/pages/BlogDetailsPage/BlogDetailsPage.scss
@@ -1,4 +1,9 @@
 .BlogDetailsPageMainWrapper {
+    a {
+        text-decoration: none;
+        color: black;
+    }
+
     .blog-details-content {
         padding: 8rem 4rem;
 
@@ -72,7 +77,7 @@
 
 
             }
-            
+
 
             .auther-right {
                 display: flex;
@@ -87,7 +92,8 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    .social-icon{
+
+                    .social-icon {
                         color: black;
                         font-size: 20px;
                     }
@@ -95,7 +101,8 @@
 
             }
         }
-        .banner{
+
+        .banner {
             width: 100%;
             height: 646px;
             margin-top: 2rem;
@@ -106,6 +113,222 @@
                 height: 100%;
                 object-fit: cover;
             }
+        }
+
+        .blogs {
+            width: 60%;
+            margin: auto;
+
+            .blog-content {
+                padding-top: 2rem;
+
+                h3 {
+                    padding-top: 1rem;
+                    font-family: General Sans;
+                    font-weight: 600;
+                    font-size: 32px;
+                    line-height: 114.99999999999999%;
+                    letter-spacing: -3%;
+                    color: #191B1D;
+                }
+
+                p {
+                    padding-top: 1rem;
+
+                    font-family: Helvetica;
+                    font-weight: 400;
+                    // width: 80%;
+                    font-size: 16px;
+                    line-height: 130%;
+                    letter-spacing: 0%;
+                    vertical-align: middle;
+
+                }
+
+                .sub-banner {
+                    padding-top: 1rem;
+                    height: 421px;
+                    overflow: hidden;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+
+            }
+        }
+    }
+
+    /////////////////////////////////      RELATED TOPIC     /////////////////////////////////////////////
+    .related-topic {
+        padding: 3rem 4rem;
+
+
+        .related-topic-header {
+            padding: 0 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            h3 {
+                font-family: General Sans;
+                font-weight: 500;
+                font-size: 56px;
+                line-height: 114.99999999999999%;
+                letter-spacing: -3%;
+                text-transform: capitalize;
+
+            }
+
+
+            .arrows-wrapper {
+                display: flex;
+                justify-content: center;
+                gap: .6rem;
+                padding-top: 0rem;
+
+                .left-arrow,
+                .right-arrow {
+                    width: 32px;
+                    height: 32px;
+                    border-radius: 50%;
+                    border: 1px solid #062C0B;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    .arrow {
+                        font-size: 20px;
+                    }
+                }
+
+                .right-arrow {
+                    background-color: #3DAE4A;
+                    border: 1px solid #3DAE4A;
+                    color: white;
+                }
+            }
+        }
+
+        .blog-cards-wrapper {
+            padding-top: 3rem;
+
+            .blog-card {
+                width: 100%;
+                margin-bottom: 3rem;
+
+                .blog-image {
+                    height: 200px;
+                    overflow: hidden;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+
+                .blog-content {
+                    .category {
+                        margin-top: 1rem;
+                        background-color: #EFE9F5;
+                        color: #414141;
+                        width: fit-content;
+                        padding: 5px 10px;
+                        border-radius: 100px;
+                        font-family: Helvetica;
+                        font-weight: 400;
+                        font-size: 12px;
+                        line-height: 110.00000000000001%;
+                        letter-spacing: 0%;
+                    }
+
+                    .blog-title {
+                        font-family: General Sans;
+                        font-weight: 600;
+                        font-size: 20px;
+                        line-height: 114.99999999999999%;
+                        letter-spacing: 0%;
+                        padding-top: 1rem;
+                    }
+
+                    .blog-description {
+                        font-family: Helvetica;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 130%;
+                        letter-spacing: 0%;
+
+                    }
+
+                    .blogged-user {
+                        font-family: Helvetica;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 130%;
+                        letter-spacing: 0%;
+                        padding-top: 1rem;
+                    }
+
+                    .date-wrapper {
+                        display: flex;
+                        gap: .5rem;
+                        font-family: Helvetica;
+                        font-weight: 400;
+                        font-size: 12px;
+                        line-height: 110.00000000000001%;
+                        letter-spacing: 0%;
+
+                    }
+
+                }
+            }
+        }
+
+
+    }
+
+    @media(max-width: 576px) {
+        .blog-details-content {
+            padding: 1rem !important;
+            padding-top: 5rem !important;
+
+            h1 {
+                font-size: 32px !important;
+            }
+
+            .banner {
+                height: 350px !important;
+            }
+
+            .sub-banner {
+                height: 220px !important;
+            }
+
+            .blogs {
+                width: 100% !important;
+                padding: 1rem !important;
+            }
+
+        }
+
+        .related-topic {
+            padding: 1rem !important;
+        }
+
+        .related-topic-header {
+            h3 {
+                font-size: 25px !important;
+            }
+        }
+    }
+
+    @media(min-width:577px) and (max-width: 768px) {
+        .blogs {
+            width: 100% !important;
+            padding: 1rem !important;
         }
     }
 }
